--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hello from VS Code and Git</title>
 </head>
 <body>
-    <p>Hello from VS Code and Git!</p>
+    <p>Hello from VS Code and Git!!</p>
     <p>Git is pretty cool.</p>
     <br>
 </body>
